# jobmate-fastapi

./: .gitignore  README.md  inspect_db.py  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/core/: config.py  security.py
app/db/: database.py
app/routers/: resumes.py
app/services/: resume_services.py
doc/: SKILL_GAP_DESIGN.md
